#1020 Collection utilities and cleanup